--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "react-redux-hooks-jwt-auth",
+  "name": "react-redux-hooks-jwt-auth", 
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "7.15.1",
+    "node": "v14.16.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
