--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-hooks-jwt-auth", 
+  "name": "react-redux-hooks-jwt-auth",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -7,6 +7,7 @@
     "node": "v14.16.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
